--- a/index.html
+++ b/index.html
@@ -3,16 +3,9 @@
 
 <head> 
 	<meta charset="UTF-8"> 
-	<meta name="viewport"
-		content="width=device-width, initial-scale=1.0"> 
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 	<title>My Portfolio</title> 
-	<link rel="stylesheet"
-		href= 
-"https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-		integrity= 
-"sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-			crossorigin="anonymous" referrerpolicy="no-referrer" /> 
-	<link rel="stylesheet" href="index.css"> 
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" /> 
 	<link rel="stylesheet" href="index.css"> 
 </head> 
 
@@ -30,29 +23,19 @@
 			<div class="menu"> 
 				<ul class="menu-list"> 
 					<li class="menu-list-items"> 
-						<a class="links" href="#home"> 
-							Home 
-						</a> 
+						<a class="links" href="#home">Home</a> 
 					</li> 
 					<li class="menu-list-items"> 
-						<a class="links" href="#portfolio"> 
-							Portfolio 
-						</a> 
+						<a class="links" href="#portfolio">Portfolio</a> 
 					</li> 
 					<li class="menu-list-items"> 
-						<a class="links" href="#about"> 
-							About 
-						</a> 
+						<a class="links" href="#about">About</a> 
 					</li> 
 					<li class="menu-list-items"> 
-						<a class="links" href="#services"> 
-							Services 
-						</a> 
+						<a class="links" href="#certificates">Certificates</a> 
 					</li> 
 					<li class="menu-list-items"> 
-						<a class="links" href="#contact"> 
-							Contact Me 
-						</a> 
+						<a class="links" href="#contact">Contact Me</a> 
 					</li> 
 				</ul> 
 			</div> 
@@ -65,9 +48,7 @@
 			<div class="headings"> 
 				<h3 class="greet-heading">Hello, I'm</h3> 
 				<h1 class="my-heading">Sourav</h1> 
-				<h4 class="sub-heading"> 
-					CPP & Python enthusiasts. 
-				</h4> 
+				<h4 class="sub-heading">CPP & Python enthusiast</h4> 
 			</div> 
 			<div class="intro-buttons"> 
 				<button class="btn common-btn">Hire Me</button> 
@@ -86,72 +67,19 @@
 				<div class="my-col"> 
 					<div class="my-card port-card"> 
 						<div class="image"> 
-							<img src="./Images/designImage2.avif"
-								alt="Web Design Image"> 
+							<img src="./Images/project1.jpg" alt="Project 1 Image"> 
 						</div> 
-						<h3 class="greet-heading blue-text">Web Design</h3> 
-						<p class="small-para blue-text">Designing</p> 
+						<h3 class="greet-heading blue-text">Personal Finance Management Application</h3> 
+						<p class="small-para blue-text">A C++ and Qt based application to manage personal finances efficiently.</p> 
 					</div> 
 				</div> 
 				<div class="my-col"> 
 					<div class="my-card port-card"> 
 						<div class="image"> 
-							<img src="./Images/webDevelopment2.avif"
-								alt="Web Development Image"> 
+							<img src="./Images/project2.jpg" alt="Project 2 Image"> 
 						</div> 
-						<h3 class="greet-heading blue-text"> 
-							Web Development 
-						</h3> 
-						<p class="small-para blue-text">Development</p> 
-					</div> 
-				</div> 
-				<div class="my-col"> 
-					<div class="my-card port-card"> 
-						<div class="image"> 
-							<img src="./Images/SEOImage2.avif" alt="SEO Image"> 
-						</div> 
-						<h3 class="greet-heading blue-text">SEO</h3> 
-						<p class="small-para blue-text">Optimization</p> 
-					</div> 
-				</div> 
-			</div> 
-			<div class="my-row"> 
-				<div class="my-col"> 
-					<div class="my-card port-card"> 
-						<div class="image"> 
-							<img src="./Images/contentImage2.avif"
-								alt="Content Writting Image"> 
-						</div> 
-						<h3 class="greet-heading blue-text"> 
-							Content Writing 
-						</h3> 
-						<p class="small-para blue-text">Writing</p> 
-					</div> 
-				</div> 
-				<div class="my-col"> 
-					<div class="my-card port-card"> 
-						<div class="image"> 
-							<img src="./Images/wordpressImage2.avif"
-								alt="Wordpress Image"> 
-						</div> 
-						<h3 class="greet-heading blue-text"> 
-							WordPress Dev 
-						</h3> 
-						<p class="small-para blue-text"> 
-							Content Management System 
-						</p> 
-					</div> 
-				</div> 
-				<div class="my-col"> 
-					<div class="my-card port-card"> 
-						<div class="image"> 
-							<img src="./Images/videoEditing2.avif"
-								alt="Video Editing Image"> 
-						</div> 
-						<h3 class="greet-heading blue-text"> 
-							Video Editing 
-						</h3> 
-						<p class="small-para blue-text">Editing</p> 
+						<h3 class="greet-heading blue-text">Pathfinder Application</h3> 
+						<p class="small-para blue-text">Developed with C++ and SFML, this application visualizes pathfinding algorithms.</p> 
 					</div> 
 				</div> 
 			</div> 
@@ -163,218 +91,40 @@
 		<div class="about-text"> 
 			<h1 class="my-heading">About Me</h1> 
 			<p class="lead-para"> 
-				GeeksforGeeks is a leading platform 
-				that provides computer science 
-				resources and coding challenges for 
-				programmers and technology 
-				enthusiasts, along with interview 
-				and exam preparations for upcoming 
-				aspirants. With a strong emphasis on 
-				enhancing coding skills and knowledge, 
-				it has become a trusted destination 
-				for over 12 million plus registered 
-				users worldwide. The platform offers 
-				a vast collection of tutorials, practice 
-				problems, interview tutorials, articles, 
-				and courses, covering various domains 
-				of computer science. 
+				I am a passionate programmer with expertise in C++ and Python. I love creating projects that solve real-world problems and enhance user experiences. 
 			</p> 
 			<p> 
-				Our exceptional mentors hailing from top 
-				colleges & organizations have the 
-				ability to guide you on a journey from 
-				the humble beginnings of coding to 
-				the pinnacle of expertise. Under their 
-				guidance watch your skills flourish 
-				as we lay the foundation and help you 
-				conquer the world of coding. 
+				With a strong foundation in computer science, I have developed several projects, including a personal finance management application and a pathfinder application. I continuously seek to improve my skills and take on new challenges. 
 			</p> 
 		</div> 
 		<div class="about-image"> 
-			<img src="./Images/heroImg2.avif" alt="About Image"> 
+			<img src="./Images/about.jpg" alt="About Image"> 
 		</div> 
 	</section> 
 
-	<!-- Services Section -->
-	<section class="services" id="services"> 
-		<div class="services-heading"> 
-			<h1 class="my-heading text-center">My Services</h1> 
+	<!-- Certificates Section -->
+	<section id="certificates" class="certificates"> 
+		<div class="certificates-heading"> 
+			<h1 class="my-heading text-center">Certificates</h1> 
 		</div> 
-		<div class="services-content"> 
+		<div class="certificates-content"> 
 			<div class="my-row"> 
 				<div class="my-col"> 
-					<div class="my-card"> 
-						<div class="icon"> 
-							<i class="fas fa-paint-brush"></i> 
+					<div class="my-card cert-card"> 
+						<div class="image"> 
+							<img src="./Images/certificate1.jpg" alt="Certificate 1 Image"> 
 						</div> 
-						<h3 class="greet-heading blue-text">Web Design</h3> 
-						<p class="small-para"> 
-							Web development refers to the creating, 
-							building, and maintaining 
-							of websites. It includes aspects such as 
-							web design, web publishing, 
-							web programming, and database management. 
-							It is the creation of an 
-							application that works over the internet 
-							i.e. websites. 
-						</p> 
-						<p class="small-para"> 
-							Web development refers to the creating, 
-							building, and maintaining 
-							of websites. It includes aspects such as 
-							web design, web publishing, 
-							web programming, and database management. 
-							It is the creation of an 
-							application that works over the internet 
-							i.e. websites. 
-						</p> 
+						<h3 class="greet-heading blue-text">Certificate in Web Development</h3> 
+						<p class="small-para blue-text">Completed an advanced course in web development, mastering HTML, CSS, JavaScript, and more.</p> 
 					</div> 
 				</div> 
 				<div class="my-col"> 
-					<div class="my-card"> 
-						<div class="icon"> 
-							<i class="fa-solid fa-code"></i> 
+					<div class="my-card cert-card"> 
+						<div class="image"> 
+							<img src="./Images/certificate2.jpg" alt="Certificate 2 Image"> 
 						</div> 
-						<h3 class="greet-heading blue-text"> 
-							Web Development 
-						</h3> 
-						<p class="small-para"> 
-							Web development refers to the creating, 
-							building, and maintaining 
-							of websites. It includes aspects such as 
-							web design, web publishing, 
-							web programming, and database management. 
-							It is the creation of an 
-							application that works over the internet 
-							i.e. websites. 
-						</p> 
-						<p class="small-para"> 
-							Web development refers to the creating, 
-							building, and maintaining 
-							of websites. It includes aspects such as 
-							web design, web publishing, 
-							web programming, and database management. 
-							It is the creation of an 
-							application that works over the internet 
-							i.e. websites. 
-						</p> 
-					</div> 
-				</div> 
-				<div class="my-col"> 
-					<div class="my-card"> 
-						<div class="icon"> 
-							<i class="fas fa-chart-line"></i> 
-						</div> 
-						<h3 class="greet-heading blue-text">SEO</h3> 
-						<p class="small-para"> 
-							Web development refers to the creating, 
-							building, and maintaining 
-							of websites. It includes aspects such as 
-							web design, web publishing, 
-							web programming, and database management. 
-							It is the creation of an 
-							application that works over the internet 
-							i.e. websites. 
-						</p> 
-						<p class="small-para"> 
-							Web development refers to the creating, 
-							building, and maintaining 
-							of websites. It includes aspects such as 
-							web design, web publishing, 
-							web programming, and database management. 
-							It is the creation of an 
-							application that works over the internet 
-							i.e. websites. 
-						</p> 
-					</div> 
-				</div> 
-			</div> 
-			<div class="my-row"> 
-				<div class="my-col"> 
-					<div class="my-card"> 
-						<div class="icon"> 
-							<i class="fas fa-quote-left"></i> 
-						</div> 
-						<h3 class="greet-heading blue-text"> 
-							Content Writting 
-						</h3> 
-						<p class="small-para"> 
-							Web development refers to the creating, 
-							building, and maintaining of websites. 
-							It includes aspects such as web design, 
-							web publishing, web programming, and 
-							database management. It is the creation 
-							of an application that works over the 
-							internet i.e. websites. 
-						</p> 
-						<p class="small-para"> 
-							Web development refers to the creating, 
-							building, and maintaining of websites. 
-							It includes aspects such as web design, 
-							web publishing, web programming, and 
-							database management. It is the creation of an 
-							application that works over the internet i.e. 
-							websites. 
-						</p> 
-					</div> 
-				</div> 
-				<div class="my-col"> 
-					<div class="my-card"> 
-						<div class="icon"> 
-							<i class="fab fa-wordpress-simple"></i> 
-						</div> 
-						<h3 class="greet-heading blue-text"> 
-							WordPress Dev 
-						</h3> 
-						<p class="small-para"> 
-							Web development refers to the creating, 
-							building, and maintaining of websites. 
-							It includes aspects such as web design, 
-							web publishing, web programming, and 
-							database management. It is the creation 
-							of an application that works over the 
-							internet i.e. websites. 
-						</p> 
-						<p class="small-para"> 
-							Web development refers to the creating, 
-							building, and maintaining 
-							of websites. It includes aspects such as 
-							web design, web publishing, 
-							web programming, and database management. 
-							It is the creation of an 
-							application that works over the internet 
-							i.e. websites. 
-						</p> 
-					</div> 
-				</div> 
-				<div class="my-col"> 
-					<div class="my-card"> 
-						<div class="icon"> 
-							<i class="fas fa-video"></i> 
-						</div> 
-						<h3 class="greet-heading blue-text"> 
-							Video Editing 
-						</h3> 
-						<p class="small-para"> 
-							Web development refers to the creating, 
-							building, and maintaining 
-							of websites. It includes aspects such as 
-							web design, web publishing, 
-							web programming, and database management. 
-							It is the creation of an 
-							application that works over the internet 
-							i.e. websites. 
-						</p> 
-						<p class="small-para"> 
-							Web development refers to the creating, 
-							building, and maintaining 
-							of websites. It includes aspects such as 
-							web design, web publishing, 
-							web programming, and database management. 
-							It is the creation of an 
-							application that works over the internet 
-							i.e. websites. 
-						</p> 
+						<h3 class="greet-heading blue-text">Certificate in Data Structures and Algorithms</h3> 
+						<p class="small-para blue-text">Acquired in-depth knowledge of data structures and algorithms to optimize coding solutions.</p> 
 					</div> 
 				</div> 
 			</div> 
@@ -390,19 +140,11 @@
 			<div class="contact-form-container"> 
 				<h1 class="greet-heading">Get In Touch</h1> 
 				<form class="contact-form"> 
-					<input class="form-controls" type="text"
-						placeholder="Your Name"> 
-					<input class="form-controls" type="text"
-						placeholder="Your Email"> 
-					<input class="form-controls" type="text"
-						placeholder="Your Phone"> 
-					<textarea class="form-controls"
-							placeholder="Write your message"
-							name="message" id="" cols="30"
-							rows="10"> 
-					</textarea> 
-					<input class="form-btn btn common-btn"
-						type="submit" value="Send Message"> 
+					<input class="form-controls" type="text" placeholder="Your Name"> 
+					<input class="form-controls" type="email" placeholder="Your Email"> 
+					<input class="form-controls" type="tel" placeholder="Your Phone"> 
+					<textarea class="form-controls" placeholder="Write your message" name="message" cols="30" rows="10"></textarea> 
+					<input class="form-btn btn common-btn" type="submit" value="Send Message"> 
 				</form> 
 			</div> 
 			<div class="contact-details"> 
@@ -415,16 +157,6 @@
 					<h5 class="contact-heading">PHONE</h5> 
 					<p class="contact-text">+91 8287223234</p> 
 				</div> 
-				<!-- <div class="details"> 
-					<h5 class="contact-heading">FAX</h5> 
-					<p class="contact-text">+91 0123456789</p> 
-				</div> 
-				<div class="details"> 
-					<h5 class="contact-heading">ADDRESS</h5> 
-					<p class="contact-text">San Francisco, CA</p> 
-					<p>4th Floor8 Lower</p> 
-					<p>San Francisco street, M1 50F</p> 
-				</div>  -->
 			</div> 
 		</div> 
 	</section> 
@@ -434,8 +166,7 @@
 		<div class="footer-content text-center"> 
 			<h4> 
 				Copyright © 2023 All rights reserved | 
-				This portfolio website template is created 
-				by GeeksforGeeks. 
+				This portfolio website template is created by Sourav. 
 			</h4> 
 			<div class="social-links"> 
 				<div class="footer-menu"> 
@@ -452,12 +183,12 @@
 						</li> 
 						<li class="footer-list-items"> 
 							<a class="footer-links" href="#"> 
-								<i class="fab fa-instagram"></i> 
+								<i class="fab fa-linkedin-in"></i> 
 							</a> 
 						</li> 
 						<li class="footer-list-items"> 
 							<a class="footer-links" href="#"> 
-								<i class="fab fa-linkedin-in"></i> 
+								<i class="fab fa-github"></i> 
 							</a> 
 						</li> 
 					</ul> 
@@ -466,13 +197,8 @@
 		</div> 
 	</footer> 
 
-	<script src= 
-"https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/all.min.js"
-		integrity= 
-"sha512-uKQ39gEGiyUJl4AI6L+ekBdGKpGw4xJ55+xyJG7YFlJokPNYegn9KwQ3P8A7aFQAUtUsAQHep+d/lrGqrbPIDQ=="
-		crossorigin="anonymous" referrerpolicy="no-referrer"> 
-	</script> 
+	<!-- JavaScript -->
 	<script src="index.js"></script> 
 </body> 
 
-</html>
+</html> 
